<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="App_name">PackPickUp</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Location">Location</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="WantToSend">Want to send</string>
    <string name="CanPickUp">Can pick up</string>
    <string name="action_settings" />
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_client_type">Client type</string>
    <string name="title_pick_up_pack">Pick up pack</string>
    <string name="title_send_pack">Send pack</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="departure_city">Departure city</string>
    <string name="arrival_city">Arrival city</string>
    <string name="title_activity_all_offers">AllOffersActivity</string>
    <string name="choose_img">Choose image</string>
    <string name="image_location">Choose ya image,you mothafucka</string>
    <string name="PhoneNumber">Phone number</string>


</resources>
