<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.idp.packpickup.SignUpActivity"
    android:background="@color/bg_login">

    <TextView
        android:id="@+id/signuptxtusername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username" />

    <EditText
        android:id="@+id/signupusername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signuptxtusername"
        android:inputType="text"/>

    <TextView
        android:id="@+id/signuptxtemail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupusername"
        android:text="@string/Email" />

    <EditText
        android:id="@+id/signupemail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signuptxtemail"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/signuptxtpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupemail"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/signuppassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signuptxtpassword"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/signuptxtlocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Location"
        android:layout_below="@+id/signuppassword" />

    <EditText
        android:id="@+id/signuplocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/signuptxtlocation"/>

    <Button
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signuplocation"
        android:text="@string/SignupBtn"
        android:onClick="signUpHandler"/>
</RelativeLayout>
